--- a/CV cá nhân của the Rock.html
+++ b/CV cá nhân của the Rock.html
@@ -50,5 +50,7 @@
         <li style="font-size:large; color: red">Red Turbo Ranger</li>
         <li style="font-size:large; color: black">Dino thunder Black Ranger</li>
     </ul>
+<p> Các thông tin khác về Jason DF sẽ được liên kết tại đây</p>
+    <a href="url">https://en.wikipedia.org/wiki/Jason_David_Frank</a>
 </body>
 </html>
